# pigeon

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md  TODO.md  docker-compose.yml  justfile  keyline-config.yaml
dev/: test-endpoint.py
docs/: index.md  package-lock.json  package.json
pigeon-api/: Cargo.toml
pigeon-api/src/: auth.rs  auth_tests.rs  error.rs  extractors.rs  lib.rs  middleware.rs  state.rs  test_support.rs
pigeon-api/src/dto/: application.rs  attempt.rs  audit.rs  dead_letter.rs  endpoint.rs  endpoint_stats.rs  event_type.rs  event_type_stats.rs  message.rs  mod.rs  oidc_config.rs  organization.rs  pagination.rs  stats.rs
pigeon-api/src/handlers/: applications.rs  attempts.rs  audit.rs  auth_config.rs  dead_letters.rs  endpoint_stats.rs  endpoints.rs  event_type_stats.rs  event_types.rs  health.rs  messages.rs  metrics.rs  mod.rs  oidc_configs.rs  organizations.rs  stats.rs  test_event.rs
pigeon-application/: Cargo.toml
pigeon-application/src/: error.rs  lib.rs
pigeon-application/src/commands/: create_application.rs  create_endpoint.rs  create_event_type.rs  create_oidc_config.rs  create_organization.rs  delete_application.rs  delete_endpoint.rs  delete_event_type.rs  delete_oidc_config.rs  delete_organization.rs  disable_endpoint.rs  mod.rs  replay_dead_letter.rs  retrigger_message.rs  retry_attempt.rs  revoke_signing_secret.rs  rotate_signing_secret.rs  send_message.rs  send_test_event.rs  update_application.rs  update_endpoint.rs  update_event_type.rs  update_organization.rs
pigeon-application/src/mediator/: command.rs  dispatcher.rs  handler.rs  mod.rs  pipeline.rs  query.rs
pigeon-application/src/mediator/behaviors/: audit.rs  mod.rs  transaction.rs
pigeon-application/src/ports/: audit_read_store.rs  audit_store.rs  delivery.rs  endpoint_stats_read_store.rs  event_dispatcher.rs  event_type_stats_read_store.rs  health.rs  message_status.rs  mod.rs  projection_store.rs  stats_read_store.rs  stores.rs  unit_of_work.rs
pigeon-application/src/queries/: get_app_stats.rs  get_application_by_id.rs  get_dead_letter_by_id.rs  get_endpoint_by_id.rs  get_endpoint_stats.rs  get_event_type_by_id.rs  get_event_type_stats.rs  get_message_by_id.rs  get_oidc_config_by_id.rs  get_organization_by_id.rs  list_applications.rs  list_attempts_by_message.rs  list_audit_log.rs  list_dead_letters_by_app.rs  list_endpoints_by_app.rs  list_event_types_by_app.rs  list_messages_by_app.rs  list_oidc_configs_by_org.rs  list_organizations.rs  mod.rs
pigeon-application/src/services/: auto_disable_saga.rs  delivery_projection.rs  delivery_worker.rs  mod.rs  outbox_worker.rs
pigeon-application/src/test_support/: fakes.rs
pigeon-application/tests/: auto_disable_bdd.rs  bdd.rs  delivery_projection_bdd.rs  delivery_worker_bdd.rs
pigeon-application/tests/features/: auto_disable.feature  create_application.feature  create_organization.feature  delete_application.feature  delete_organization.feature  delivery_projection.feature  delivery_worker.feature  disable_endpoint.feature  endpoint.feature  event_type.feature  get_app_stats.feature  get_application_by_id.feature  get_dead_letter_by_id.feature  get_endpoint_by_id.feature  get_endpoint_stats.feature  get_event_type_by_id.feature  get_event_type_stats.feature  get_message_by_id.feature  get_oidc_config_by_id.feature  get_organization_by_id.feature  list_applications.feature  list_attempts_by_message.feature  list_audit_log.feature  list_dead_letters_by_app.feature  list_endpoints_by_app.feature  list_event_types_by_app.feature  list_messages_by_app.feature  list_oidc_configs_by_org.feature  list_organizations.feature  oidc_config.feature  replay_dead_letter.feature  retrigger_message.feature  retry_attempt.feature  send_message.feature  send_test_event.feature  update_application.feature  update_organization.feature
pigeon-domain/: Cargo.toml
pigeon-domain/src/: aggregate_root.rs  application.rs  attempt.rs  dead_letter.rs  endpoint.rs  error.rs  event.rs  event_type.rs  lib.rs  message.rs  name_generator.rs  oidc_config.rs  organization.rs  outbox.rs  test_support.rs  version.rs
pigeon-infrastructure/: Cargo.toml
pigeon-infrastructure/migrations/: 20260328000001_create_applications.sql  20260328000002_create_event_types.sql  20260328000003_create_endpoints.sql  20260328000004_create_endpoint_events.sql  20260328000005_create_messages.sql  20260328000006_create_attempts.sql  20260328000007_create_organizations.sql  20260328000008_add_org_id_to_applications.sql  20260328000009_create_oidc_configs.sql  20260328000010_add_attempt_columns.sql  20260328000011_create_dead_letters.sql  20260328000012_add_event_type_system.sql  20260328000013_create_event_outbox.sql  20260328000014_create_projections.sql  20260329000001_add_stats_indexes.sql  20260329000002_add_cascade_deletes.sql  20260329000003_add_endpoint_name.sql  20260329000004_make_signing_secret_nullable.sql  20260329000005_create_audit_log.sql  20260330000001_signing_secrets_array.sql
pigeon-infrastructure/src/http/: mod.rs  reqwest_webhook_client.rs
pigeon-infrastructure/src/persistence/: change_tracker.rs  mod.rs  pg_application_read_store.rs  pg_application_store.rs  pg_attempt_read_store.rs  pg_attempt_store.rs  pg_audit_read_store.rs  pg_audit_store.rs  pg_dead_letter_read_store.rs  pg_dead_letter_store.rs  pg_delivery_queue.rs  pg_endpoint_read_store.rs  pg_endpoint_stats_read_store.rs  pg_endpoint_store.rs  pg_event_outbox.rs  pg_event_type_read_store.rs  pg_event_type_stats_read_store.rs  pg_event_type_store.rs  pg_health_checker.rs  pg_message_read_store.rs  pg_message_store.rs  pg_oidc_config_read_store.rs  pg_oidc_config_store.rs  pg_organization_read_store.rs  pg_organization_store.rs  pg_projection_store.rs  pg_stats_read_store.rs  pg_unit_of_work.rs  pg_unit_of_work_factory.rs
pigeon-infrastructure/tests/: persistence_tests.rs  webhook_client_tests.rs
pigeon-macros/: Cargo.toml
pigeon-server/: Cargo.toml
pigeon-server/src/: bootstrap.rs  config.rs  main.rs
pigeon-ui/: index.html  (+6 more)
(+59 files in other folders)
