[package]
name = "pigeon-api"
edition.workspace = true
version.workspace = true

[dependencies]
pigeon-domain = { path = "../pigeon-domain" }
pigeon-application = { path = "../pigeon-application" }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "16"
http-body-util = "0.1"
mockall = "0.13"
pigeon-application = { path = "../pigeon-application", features = ["test-support"] }
pigeon-domain = { path = "../pigeon-domain", features = ["test-support"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
