[package]
name = "pigeon-api"
edition.workspace = true
version.workspace = true

[dependencies]
pigeon-domain = { path = "../pigeon-domain" }
pigeon-application = { path = "../pigeon-application" }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "9"
metrics = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "16"
http-body-util = "0.1"
mockall = "0.13"
pigeon-application = { path = "../pigeon-application", features = ["test-support"] }
pigeon-domain = { path = "../pigeon-domain", features = ["test-support"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rsa = { version = "0.9", features = ["pkcs5"] }
rand = "0.8"
