[package]
name = "pigeon-domain"
edition.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pigeon-macros = { path = "../pigeon-macros" }
fake = { version = "3", features = ["derive", "chrono", "uuid"], optional = true }
rand = "0.8"
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
test-support = ["fake"]
